2007-08-11  Luca Bruno  <lethalman88@gmail.com>

	* plugins/gtk/st/GtkTextBuffer.st: added but doesn't work yet because of other Gtk dependencies

	* st/kernel/initialDecl (CompiledCode): argumentCount and temporaryCount have been renamed to argumentStackSize and temporaryStackSize and moved to CompiledMethod
	(CompiledBlock): argumentsTop has been renamed to argumentStackTop

	* syx/syx-enums.h: instance variables of CompiledCode, CompiledMethod and CompiledBlock have been updated

	* syx/syx-object.c: method and block context creation have been updated according to the above refactoring
	
	* st/kernel/PositionableStream.st (peek): answer nil if at the end
	(skipTo:): added

	* syx/syx-lexer.c (_syx_lexer_token_symbol): support for quoted symbols

	* st/kernel/Compiler.st (initializeStream): support for quoted symbols

	* syx/syx-init.c (syx_set_root_path): save the root path anyway also if it doesn't exist

	* src/main.c (_getopt_do): fixed issue #11

	* syx/syx-primitives.c (FileStream_fileOp): assert the object is a string for nextPutAll:

	* plugins/wingui/SConscript: fixed building

	Renamed all 'class' to 'klass' to support C++ compilation.
	Applied issue #9 patch

2007-08-10  Luca Bruno  <lethalman88@gmail.com>

	Refactored all inline to be inserted into headers (issue #9).
	Added dllimport and dllexport attributes when building DLLs.
	
	* syx/syx-memory.c (syx_freev): removed

	* plugins/gtk/st/GtkScrolledWindow.st: added

	* plugins/gtk/st/GtkAdjustment.st: added

	* plugins/gtk/plugin-init.c (syx_g_closure_marshal): added marshal function for GClosure

	* plugins/gtk/st/GObject.st (GClosure): added wrapper
	
	* syx/syx-utils.c (syx_send_messagev): added

	* syx/syx-plugins.c (syx_plugin_symbol): added

	* st/kernel/SystemDictionary.st (plugin:cSymbol:): added with primitive

2007-08-09  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-scheduler.c (syx_scheduler_remove_process): set next process to be active
