@@ -40,7 +40,7 @@ if penv['READLINE']:
          lib_shared = env.SharedLibrary (target='syx-readline', source=lib_objects)
          Default (lib_shared)
          
-         instdir = os.path.join (env['datadir'], 'plugins', 'readline')
+         instdir = os.path.join (env['plugindir'], 'readline')
          env.SyxInstall (instdir, lib_shared)
       else:
          conf.Finish ()
