@@ -47,7 +47,7 @@ if penv['WINGUI']:
          lib_shared = env.SharedLibrary (target='syx-wingui', source=lib_objects)
          Default (lib_shared)
          
-         instdir = os.path.join (env['datadir'], 'plugins', 'wingui')
+         instdir = os.path.join (env['plugindir'], 'wingui')
          env.SyxInstall (instdir, lib_shared)
 
 target = penv.Install (os.path.join (distdir, 'plugins', 'wingui'), lib_sources + ['SConscript'])
