@@ -1,3 +1,13 @@
+2007-08-12  Luca Bruno  <lethalman88@gmail.com>
+
+	* src/main.c (_getopt_do): -c option has been added
+
+	* st/kernel/SystemDictionary.st (continueStartup): a new variable has been added to specify if the startup sequence must continue after fileing in files
+
+	* syx/syx-platform.h (SYX_PLUGIN_PATH): added
+
+	* SConstruct: option 'plugindir' has been added which belongs by default to the machine-dependent directory $libdir/syx
+
 2007-08-11  Luca Bruno  <lethalman88@gmail.com>
 
 	* plugins/gtk/st/GtkTextBuffer.st: added but doesn't work yet because of other Gtk dependencies
